Updated dependencies. Switched to Java 17. Fixed circular dependencies.